--- a/Cargo.toml
+++ b/Cargo.toml
@@ -72,3 +72,9 @@ sp-storage = { version = "21.0.0", default-features = false }
 sp-transaction-pool = { version = "34.0.0", default-features = false }
 sp-version = { version = "37.0.0", default-features = false }
 substrate-wasm-builder = { version = "24.0.0", default-features = false }
+
+# fhe deps
+fhe = { git = "https://github.com/Cloak-Network/fhe-no-std.git"}
+fhe-util = { git = "https://github.com/Cloak-Network/fhe-no-std.git"}
+fhe-math = { git = "https://github.com/Cloak-Network/fhe-no-std.git"}
+fhe-traits = { git = "https://github.com/Cloak-Network/fhe-no-std.git"}
