--- a/pallets/fhe-math/Cargo.toml
+++ b/pallets/fhe-math/Cargo.toml
@@ -26,6 +26,7 @@ fhe.workspace = true
 fhe-math.workspace = true
 fhe-util.workspace = true
 fhe-traits.workspace = true
+sp-std.workspace = true
 rand.workspace = true
 
 [dev-dependencies]
