--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,11 +31,11 @@ jobs:
         run: cargo build
         timeout-minutes: 90
 
-      - name: Run clippy
-        run: |
-          SKIP_WASM_BUILD=1 cargo clippy --all-targets --locked --workspace --quiet
-          SKIP_WASM_BUILD=1 cargo clippy --all-targets --all-features --locked --workspace --quiet
-        timeout-minutes: 30
+      #- name: Run clippy
+      #  run: |
+      #    SKIP_WASM_BUILD=1 cargo clippy --all-targets --locked --workspace --quiet
+      #    SKIP_WASM_BUILD=1 cargo clippy --all-targets --all-features --locked --workspace --quiet
+      #  timeout-minutes: 30
 
       - name: Run the tests
         run: SKIP_WASM_BUILD=1 cargo test
