--- a/pallets/fhe-math/Cargo.toml
+++ b/pallets/fhe-math/Cargo.toml
@@ -33,6 +33,8 @@ rand.workspace = true
 sp-core = { default-features = true, workspace = true }
 sp-io = { default-features = true, workspace = true }
 sp-runtime = { default-features = true, workspace = true }
+pallet-insecure-randomness-collective-flip.workspace = true
+
 
 [features]
 default = ["std"]
