--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 members = [
     "node",
     "pallets/fhe-math",
+    "pallets/fhe-vote",
     "runtime",
 ]
 resolver = "2"
@@ -16,6 +17,7 @@ resolver = "2"
 [workspace.dependencies]
 cloak-runtime = { path = "./runtime", default-features = false }
 pallet-fhe-math = { path = "./pallets/fhe-math", default-features = false }
+pallet-fhe-vote = { path = "./pallets/fhe-vote", default-features = false }
 clap = { version = "4.5.3" }
 frame-benchmarking-cli = { version = "42.0.0", default-features = false }
 frame-system = { version = "37.0.0", default-features = false }
